--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/jtparrett/james"
   },
   "dependencies": {
+    "autoprefixer": "^6.7.2",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^14.0.0",
@@ -21,6 +22,7 @@
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-sass-glob": "^1.0.8",
